# uvcAndroid

./: README.md  Version1.0.0.md  Version3.0.0.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/maxvision/uvcandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/maxvision/: MyApplication.kt  SimpleUvcActivity.kt
app/src/main/java/com/maxvision/uvcandroid/: DualActivity.kt  MainActivity.kt  MultiChannelActivity.java  MyApplication.kt  StartActivity.kt
app/src/main/res/layout/: activity_dual.xml  activity_main.xml  activity_multi_channel.xml  activity_simple_uvc.xml  activity_start.xml  fragment_hidden.xml  fragment_iris.xml  fragment_multi_camera.xml  layout_item_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libausbc/: build.gradle
libnative/: build.gradle
libnative/src/main/cpp/module/yuv/: yuv.h
libnative/src/main/cpp/proxy/: proxy_yuv.h
libuvc/: build.gradle
libuvc/src/main/cpp/: CMakeLists.txt  UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  com_maxvision_uvcxu_UVCLight.cpp  com_maxvision_uvcxu_UVCLight.h  serenegiant_usb_UVCCamera.cpp  utilbase.h
libuvc/src/main/cpp/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_internal.h
libuvc/src/main/java/uvcxu/: LightControl.java
libuvc/src/main/jni/UVCCamera/: UVCCamera.cpp  UVCCamera.h  serenegiant_usb_UVCCamera.cpp
libuvc/src/main/jni/libuvc/src/: device.c
libuvccommon/: build.gradle
uvclib/: build.gradle
uvclib/libs/: uvckit-release.aar
(+38 files in other folders)
